upto extracting Logic to the Model

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,4 +1,5 @@
-<%= @player1 %> v <%= @player2 %>
+<%= @player1.name %> v <%= @player2.name %>
 <div>
-<%= @player2 %>: 40HP 
+<%= @player2.name %>: 40HP 
 </div>
+<a href="/attack">Attack</link>
